# gcmt

./: README.md  pyproject.toml
cm/: __init__.py  cli.py
src/cm/: cli.py
