[project]
name = "cm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "garrethlee", email = "garreth.lee@huggingface.co" }
]
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.26.2",
    "pyperclip>=1.9.0",
    "ruff>=0.7.4",
    "typer>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
